# selfbalancingrobot

./: .gitignore  LICENSE  odriveconfig.json  readme.md
cad/mcuenclosure/: powermodule.scad  prototype_powerbank_mount.scad
cad/mechanical/: base_board_cad.scad  common.scad  middle_board_cad.scad
cad/stl/: prototype_breadboard_mount.stl  tp4056mount.stl
docs/: motor_controller_calibration.md
docs/mechanical/: top_board_cad.scad
docs/mechanical/batterymount/: power4all.scad  power4allmount.scad  power4allmount.stl
rev2/ahrs/sensor_calibration_write/: sensor_calibration_write.ino
rev2/firmware/: AHRS.cpp  AHRS.h  EventBus.cpp  EventBus.h  MotionController.cpp  MotionController.h  RotaryEncoder.cpp  RotaryEncoder.h  UserInterface.cpp  UserInterface.h  firmware.ino
src/: ISpacialSensor.h  MPU6050.cpp  MPU6050.h  devsetup.md  sbrmain  sbrmain.cpp
src/daemon/: .gitignore  CMakeLists.txt  CMakeSettings.json  ISpacialSensor.h  MPU6050.cpp  MPU6050.h  Makefile  devsetup.md  main.cpp  sbrconfig.json  sbrconfig_example.json  sbrmain.cpp
src/daemon/ahrs/: AHRS.h  AHRSController.cpp  AHRSController.h  MPU6050.cpp
src/daemon/ahrs/algorithms/: Madgwick.cpp  Madgwick.h
src/daemon/ahrs/sensors/: MPU6050Accel.cpp  MPU6050Accel.h
src/daemon/calibtool/: AHRSDump.cpp  AHRSDump.h  CMakeLists.txt  Calibration.cpp  Calibration.h  main.cpp
src/daemon/coms/: Pi4I2CDevice.h
src/daemon/imu/: IIMU.h  ISpacialSensor.h  MPU6050.cpp  MPU6050Accel.cpp  MPU6050Accel.h  MPU6050Gyro.cpp  MPU6050Gyro.h  MPU6050I2C.cpp  MPU6050I2C.h  Madgwick.cpp  Madgwick.h
src/daemon/lib/MPU6050/examples/MPU6050-Pi-Demo/: Makefile  demo_dmp  demo_raw
src/daemon/src/: CMakeLists.txt  SBRCommon.h  SBRController.cpp  SBRController.h  main.cpp  sbrcontroller.h  sensors.h
src/daemon/src/ahrs/: AHRS.cpp  AHRS.h  AHRSController.cpp  AHRSController.h  AHRSManager.cpp  AHRSManager.h  CMakeLists.txt  MPU6050.h
src/daemon/src/ahrs/algorithms/: CMakeLists.txt  IAHRSFusionAlgorithm.h  Madgwick.cpp  Madgwick.h  Mahony.cpp  Mahony.h
src/daemon/src/ahrs/sensors/: CMakeLists.txt  FXAS21002Gyro.cpp  FXAS21002Gyro.h  FXOS8700Accel.cpp  FXOS8700Accel.h  FXOS8700Mag.cpp  FXOS8700Mag.h  MPU6050Accel.cpp  MPU6050Accel.h  MPU6050Gyro.cpp  MPU6050Gyro.h  TripleAxisMovingAverageFilter.cpp  TripleAxisMovingAverageFilter.h
src/daemon/src/coms/: CMakeLists.txt  IDataDevice.h  II2CDevice.h  ISerialDevice.h  IStringReaderWriter.h  LinuxI2CDevice.cpp  LinuxI2CDevice.h  LinuxSerialDevice.cpp  LinuxSerialDevice.h  Pi4I2CDevice.cpp  Pi4I2CDevice.h  StringReaderWriter.cpp  StringReaderWriter.h  WiringPiWrapper.cpp  WiringPiWrapper.h
src/daemon/src/motor/: CMakeLists.txt  IMotorController.h  ISBRController.h  ODriveController.cpp  ODriveController.h  SBRController.cpp  SBRController.h
src/daemon/src/utility/: CMakeLists.txt  FileConfigProvider.cpp  FileConfigProvider.h  GCodeChecksumCalc.cpp  GCodeChecksumCalc.h  IChecksumCalculator.h  IConfigProvider.h  IConfigSection.h  ILoggerFactory.h  ISBRFactory.h  JSONConfig.cpp  JSONConfig.h  JSONConfigProvider.cpp  JSONConfigProvider.h  JSONConfigSection.cpp  JSONConfigSection.h  LoggerFactory.cpp  LoggerFactory.h  Register.cpp  Register.h  SBRProdFactory.cpp  SBRProdFactory.h  ThreadHelper.cpp  ThreadHelper.h
src/daemon/test/: AHRSPerformanceTests.cpp  CMakeLists.txt  CMakeLists.txt.in  ExampleTest.cpp  GCodeChecksumCalcTests.cpp  MemoryConfigProvider.h  MotorComsIntegrationTests.cpp  StringReaderWriterTests.cpp
src/daemon/utility/: ISBRFactory.h  SBRProdFactory.cpp  SBRProdFactory.h
src/sbrwebui/: README.md  package-lock.json  package.json  server.js
src/sbrwebui/client/: .eslintcache  package-lock.json  package.json
src/sbrwebui/client/src/: App.js  Face.js  MeasureAndRender.js  MotionSettings.js  MotorControl.css  MotorControl.js  SVGDrag.js  WifiSettings.js  index.css
